# Rede-Neural-do-Zero

./: README.md  main.ipynb  modelo teste.npz  pyproject.toml  redeneural.py
.claude/: settings.json
